--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Jumbo React - Admin Dashboard">
     <link rel="apple-touch-icon-precomposed" href="favicon.ico">
-
+    <script src="https://kit.fontawesome.com/40d5ff8d1d.js" crossorigin="anonymous"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places,geometry,drawing&key=AIzaSyBgqAomc9Vukt12AV3tJLasBnNehSNKuOY"></script>
 
     <script>
